--- a/resources/u3_1.html
+++ b/resources/u3_1.html
@@ -1,16 +1,7 @@
-<?php
-if(basename(__FILE__) == basename($_SERVER["SCRIPT_FILENAME"])) {
-  header("Location: ../u3_1");
-}
-
-function getContent($args) {
-	return '<h1>Aufgabe 3.1 – Responsiv mit Flexbox Desktop-First</h1>
-	<p><b>Spielen Sie zunächst das Flexbox Froggy-Spiel, um Flexbox zu lernen. Implementieren Sie dann ausschließlich mit HTML und CSS Flexbox <a href="https://kaul.inf.h-brs.de/we/assets/img/holy-grail1.png">folgendes</a> responsive Webdesign nach der Desktop-First-Strategie!</b></p>
-	<p>Der notwendige Code dafür sieht so aus:</p>
-	<p><pre>&lt;!DOCTYPE html>
-&lt;html>
-&lt;head>
-&lt;style>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
 body {
 	display: flex;
 	flex-wrap: wrap;
@@ -73,28 +64,20 @@ body {
 		width: 100%;
 	}
 }
-&lt;/style>
-&lt;/head>
-&lt;body>
-&lt;div id="p1">
+</style>
+</head>
+<body>
+<div id="p1">
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-&lt;/div>
-&lt;div id="p2">
+</div>
+<div id="p2">
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-&lt;/div>
-&lt;div id="p3">
+</div>
+<div id="p3">
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-&lt;/div>
-&lt;div id="p4">
+</div>
+<div id="p4">
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-&lt;/div>
-&lt;/body>
-&lt;/html></pre></p>
-	<p>Das Ergebnis sieht dann etwa so aus:</p>
-	<iframe src="resources/u3_1.html" title="Aufgabe 3.1"></iframe>';
-}
-
-function getHeader($args) {
-	return array("title"=>"Aufgabe 3.1");
-}
-?>
+</div>
+</body>
+</html>
